--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.2",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-photo-view": "^1.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
